syntax = "proto3";

package user;

option go_package = "proto/user";
option java_multiple_files = true;
option java_package = "io.grpc.examples.user";
option java_outer_classname = "User";

service UserService {
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
  rpc UserCheck(UserCheckRequest) returns (UserCheckResponse) {}
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse) {}
  rpc UserRemove(UserRemoveRequest) returns (UserRemoveResponse) {}
  rpc UserGet(UserGetRequest) returns (UserGetResponse) {}
  rpc UserList(UserListRequest) returns (UserListResponse) {}
}

// -------------------
// login
// -------------------
message UserLoginRequest {
  string authData = 1;
}

message UserLoginResponse {
  bytes data = 1;
  string message = 2;
  string code = 3;
}

// -------------------
// CheckToke
// -------------------
message UserCheckRequest {
  string data = 1;
}

message UserCheckResponse {
  bool state = 1;
  string message = 2;
}

// -------------------
// Crete
// -------------------
message UserCreateRequest {
  string login = 1;
  string name = 2;
  string password = 3;
  string email = 4;
}

message UserCreateResponse {
  string message = 1;
  string code = 2;
}

// -------------------
// Remove
// -------------------
message UserRemoveRequest {
  string id = 1;
}

message UserRemoveResponse {
  string message = 1;
  string code = 2;
}

// -------------------
// Get
// -------------------
message UserGetRequest {
  string data = 1;
}

message UserGetResponse {
  string login = 1;
  string name = 2;
  string email = 3;
  string code = 4;
  string message = 5;
  string id = 6;
}

// -------------------
// List
// -------------------
message UserListRequest {
  string list = 1;
  string offset = 2;
  bool   filter = 3;
  string value = 4;
}

message Users {
  string name = 2;
  string email = 3;
  string uuid = 4;
  string id = 5;
}

message UserListResponse {
  repeated Users users = 1;
  string code = 4;
  string message = 5;
}
